# berylecosysteme

./: .gitignore
beryl-core-api/: .env.example  .env.example.mobility  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  Dockerfile  IMPLEMENTATION_MANIFEST.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_README.md  MOBILITY_CHECKLIST.md  MOBILITY_EXECUTIVE_SUMMARY.md  MOBILITY_README.md  PRODUCTION_README.md  QUICK_COMMANDS.md  README.md  README_MOBILITY.md  SECURITY_BASELINE.md  TESTING_GUIDE.md  deploy.sh  deploy_staging.sh  docker-compose.yml  generate-mtls-certs.sh  generate_test_tokens.py  jwt_check.db  load_test_auth.py  main.py  openapi.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_ci_tests.sh  run_contract_tests.sh  validate_config.py
beryl-core-api/app/: __init__.py  main.py
beryl-core-api/chaos/: corrupt-event-payload.sh  flood-2000-tps.sh  high-load-test.sh  invalid-signature.sh  kill-kafka-broker.sh  simulate-db-loss.sh  simulate-psp-replay.sh
beryl-core-api/config/: api-gateway.yaml  environments.py  event_schemas.json
beryl-core-api/docs/: GRAPHQL_GATEWAY.md  MICROSERVICE_ALIGNMENT.md  MOBILITY_INTEGRATION.md  OBSERVABILITY.md  api-contracts.md  architecture.md  grafana_dashboard.json
beryl-core-api/infra/: alertmanager.yml  docker-compose.prod.yml  docker-compose.staging.yml  kafka-cluster-ha.yml  key-rotation-cron.sh  postgres-ha.yml  prometheus-alert-rules.yml  vault-policy.hcl
beryl-core-api/k8s/: admission-controller.yaml  certificates.yaml  deployment.yaml  hpa.yaml  monitoring-config.yaml  network-policies.yaml  (+6 more)
(+557 files in other folders)
